# bevy_settings

./: .gitignore  Cargo.toml  README.md
SaveGames/: slot1_PlayerProgress.json  slot1_WorldState.json
bevy_settings/: Cargo.toml
bevy_settings/examples/: advanced.rs  basic.rs  demo.rs  dynamic_save_slots.rs  migration.rs  new_api.rs  settings_store.rs  settings_store_resource.rs  simple.rs
bevy_settings/settings/: audio_settings.json
bevy_settings/src/: commands.rs  common.rs  delta.rs  error.rs  format.rs  group.rs  lib.rs  manager.rs  plugin.rs  plugin_v2.rs  settings_store.rs  storage.rs  trait_def.rs  unified_storage.rs
bevy_settings/tests/: integration.rs  settings_store_integration.rs
bevy_settings_derive/: Cargo.toml
bevy_settings_derive/src/: lib.rs
bevy_settings_meta/: Cargo.toml  todo.md
bevy_settings_meta/src/: lib.rs
