[workspace]
members = ["bevy_settings", "bevy_settings_derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tim Jonas Wechler"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/timjonaswechler/bevy_settings"

[workspace.dependencies]
bevy = { version = "0.14", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
