[workspace]
members = ["bevy_settings", "bevy_settings_derive"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Tim Jonas Wechler"]
license = "MIT"
repository = "https://github.com/timjonaswechler/bevy_settings"

[workspace.dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["bevy_log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.0-rc.3"
thiserror = "1.0"
