[package]
name = "bevy_settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy_settings_meta = { path = "../bevy_settings_meta", optional = true }
bevy_settings_derive = { path = "../bevy_settings_derive" }

bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
toml = "0.8"
ron = "0.8"
thiserror = { workspace = true }
bevy_paths = { path = "../../bevy_paths/bevy_paths" }

# For examples and tests
[dev-dependencies]
bevy = { workspace = true, features = ["bevy_render", "bevy_core_pipeline"] }

[features]
default = []
meta = ["bevy_settings_meta"]


